--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+h1 {
+  font-family: 'Pacifico', cursive;
+  font-size: 72px;
+  color: #61dafb;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
