--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -15,3 +15,13 @@
 .card-container:hover {
   transform: scale(1.05);
 }
+
+.pokename {
+  text-transform: capitalize;
+}
+
+.pokeimg {
+  height: 120px;
+  width: 150px;
+  margin: auto;
+}
